agregando nuevos proyectos

--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
                 <img src="./img/javasript.png" alt="icono-javascript" class="iconos">
                 <img src="./img/photoshop.png" alt="icono-photoshop" class="iconos">
                 <img src="./img/illustrator.png" alt="icono-illustrator" class="iconos">
+                 <img src="./img/php.png" alt="icono-php" class="iconos">
+                <img src="./img/wordpress.png" alt="icono-wordpress" class="iconos">
             </div>
 
         </div>
@@ -210,6 +212,35 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
+                    <div class="card">
+                        <img src="./img/proyecto-php.jpg" class="card-img-top" alt="ecommerce tiendo de libros">
+                        <div class="card-body">
+                            <h3 class="card-title">Ecommerce Tienda de Libros</h3>
+                            <p class="card-text">Este proyecto consiste en el desarrollo de una tienda virtual especializada en la venta de libros, utilizando el lenguaje de programación PHP,
+                                                 La tienda cuenta con un catálogo dinámico de libros organizados por categorías, autores y géneros, permitiendo a los usuarios realizar búsquedas avanzadas, 
+                                                 filtrar resultados y ver detalles individuales de cada libro.
+                            </p>
+                            <p><a href="https://drive.google.com/drive/u/1/folders/1XzmEASlq4cyCepHHB2l8HeANcyJfFz57" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" target="_blank">Ver +</a></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
+                    <div class="card">
+                        <img src="./img/proyecto-wordpress.jpg" class="card-img-top" alt="landingPage en Wordpress">
+                        <div class="card-body">
+                            <h3 class="card-title">Landing Page en Wordpress</h3>
+                            <p class="card-text">Este proyecto consiste en la creación de una Landing Page moderna y optimizada, desarrollada en WordPress utilizando el tema Astra y el editor de bloques Gutenberg. El objetivo principal es captar la atención de los visitantes,
+                                                 comunicar de forma clara una propuesta de valor y convertir esos visitantes en clientes.
+                            </p>
+                            <p><a href="https://drive.google.com/drive/u/1/folders/1nwqvyq8wWaYmGi89GK6Igcyc5td4VoSg" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" target="_blank">Ver +</a></p>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
         </div>
         
