--- a/index.html
+++ b/index.html
@@ -240,6 +240,17 @@
                     </div>
                 </div>
 
+                <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
+                    <div class="card">
+                        <img src="./img/f1-vue.jpg" class="card-img-top" alt="landingPage en Vue">
+                        <div class="card-body">
+                            <h3 class="card-title">Proyecto en Vue</h3>
+                            <p class="card-text">Este proyecto en Vue.js permite a los usuarios crear un piloto de Fórmula 1 mediante un formulario interactivo, generando una ficha personalizada con los datos ingresados. Se utilizó la directiva template para organizar las vistas, methods para gestionar la lógica del formulario y props para pasar los datos de las imagenes de las escuderias.
+                            </p>
+                            <p><a href="https://drive.google.com/drive/u/1/folders/1usl9Z9G9iPQ5qvkAGydbguOaeipY6xSL" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" target="_blank">Ver +</a></p>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
